--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="bottom_right_button">Bottom Right Button</string>
     <string name="references">References</string>
     <string name="for_more_references_about_skin_cancer_check_these_websites_out">For more references about skin cancer check these websites out</string>
-    <string name="https_www_mayoclinic_org_diseases_conditions_skin_cancer_symptoms_causes_syc_20377605">https://www.mayoclinic.org/diseases-conditions/skin-cancer/symptoms-causes/syc-20377605</string>
+    <string name="https_www_mayoclinic_org_diseases_conditions_skin_cancer_symptoms_causes_syc_20377605">"https://www.mayoclinic.org/diseases-conditions/skin-cancer/symptoms-causes/syc-20377605"</string>
 </resources>
